# scep

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .coverage  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202607070001_initial_empty_migration.py  202607090001_create_facilities.py  202607100001_create_charging_stations.py  202607110001_create_identity_access.py  202607130001_create_reservations.py  202607140001_create_charging_sessions.py  202607150001_create_telemetry_samples.py  202607170001_create_domain_events.py  202607180001_add_analytics_query_indexes.py  202607210001_create_dataset_exports.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py  logging.py  observability.py
backend/app/infrastructure/: database.py
backend/app/modules/analytics/: metrics.py
backend/app/modules/datasets/: api.py  domain.py  infrastructure.py  metrics.py  schemas.py  service.py  storage.py
backend/app/modules/events/: api.py  contracts.py  dispatcher.py  domain.py  infrastructure.py  metrics.py
backend/app/modules/telemetry/: api.py  dataset_export_reader.py  domain.py  infrastructure.py  metrics.py  service.py
backend/tests/: conftest.py
backend/tests/architecture/: test_no_business_endpoints.py  test_observability_config.py
backend/tests/integration/: test_health.py  test_readiness.py
backend/tests/unit/: test_config.py  test_observability.py
simulation-engine/: Dockerfile  pyproject.toml
simulation-engine/app/: main.py
simulation-engine/app/clients/: backend.py
simulation-engine/app/core/: config.py
(+151 files in other folders)
