[project]
name = "scep-backend"
version = "0.1.0"
description = "Backend API for the Smart Charging Experimentation Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.16.0",
  "fastapi>=0.115.0",
  "opentelemetry-api>=1.34.0",
  "opentelemetry-sdk>=1.34.0",
  "opentelemetry-exporter-otlp>=1.34.0",
  "prometheus-fastapi-instrumentator>=7.1.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.9.0",
  "python-json-logger>=3.3.0",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.34.0"
]

[dependency-groups]
dev = [
  "bandit>=1.8.0",
  "black>=25.1.0",
  "coverage>=7.8.0",
  "httpx>=0.28.0",
  "mypy>=1.15.0",
  "pip-audit>=2.9.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.11.0"
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
