[project]
name = "scep-simulation-engine"
version = "0.1.0"
description = "External digital twin simulation engine foundation for SCEP"
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.0", "pydantic-settings>=2.9.0"]
[dependency-groups]
dev = ["pytest>=8.3.0", "ruff>=0.11.0", "black>=25.1.0"]
